Twenty Twenty: Correct alignment for embedded Instagram posts.
Props SGr33n, audrasjb, nielslange, JarretC.
Fixes #48688.
Built from https://develop.svn.wordpress.org/trunk@46840


git-svn-id: http://core.svn.wordpress.org/trunk@46640 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwenty/style-rtl.css
+++ b/wp-content/themes/twentytwenty/style-rtl.css
@@ -639,6 +639,11 @@ figcaption a,
 	color: inherit;
 }
 
+blockquote.instagram-media,
+iframe.instagram-media {
+	margin: auto !important;
+}
+
 
 /* GALLERIES */
 
