--- a/wp-content/themes/twentytwenty/style.css
+++ b/wp-content/themes/twentytwenty/style.css
@@ -643,6 +643,11 @@ figcaption a,
 	color: inherit;
 }
 
+blockquote.instagram-media,
+iframe.instagram-media {
+	margin: auto !important;
+}
+
 
 /* GALLERIES */
 
